# SPP_Exercises

./: .gitignore  README.md
Exercise1/Code/: Exercise1.tar
Exercise1/Code/Task2/: Makefile  error.c  errorOld.c
Exercise1/Code/Task3/: list.c  list.h
Exercise1/Code/Task3/tests/: Makefile  run  test  test.c
Praktikum1/: AbgabePraktikum1.tar  example_job.sh
Praktikum1/Abgabe/Task05/b/: JobScriptB.sh  MEINFREUND  Makefile  MandelBrot.cpp  MandelBrot.h  b.cpp  complex.cpp
Praktikum1/Abgabe/Task05/c/: Makefile  MandelBrot.cpp  MandelBrot.h  c.cpp  complex.h  ppmwrite.cpp  ppmwrite.h
Praktikum1/Abgabe/Task2/a/: Makefile  jobScript.sh  merge_sort.c  merge_sort.h
Praktikum1/Abgabe/Task2/b/: Makefile  jobScript.sh  merge_sort.c  merge_sort.h
Praktikum1/Abgabe/Task2/c/: jobScript.sh  merge_sort.c  merge_sort.h
Praktikum1/Abgabe/Task3/b/: jobScript.sh  task3.c
Praktikum1/Abgabe/Task3/c/: Makefile  jobScript.sh  task3  task3.c  task3.h
Praktikum1/Task2/Kostja/a/: merge  (+1 more)
Praktikum1/Task3/: task3.c  task3c1.c  task3c2.c
Praktikum1/Task4/: sharing.c  sharingKM.c
Praktikum2/: AbgabePraktikum2.tar  CMakeLists.txt  MPI_code.tar
Praktikum2/Abgabe/: .cpu_freq  Makefile  jobTask1.sh  jobTask2.sh  perf_analysis.sh  task1.c  task2  task2.c
Praktikum2/MPI_code/: .cpu_freq  batch_job.sh  task1.c
Praktikum2/kostja/MPI_code/: .cpu_freq  Makefile  task1.c  task11.c  task2  task2.c  test1  test1.c
Praktikum3/Abgabe/: template.cu
Praktikum3/CUDA_code/: batch_job.sh
Praktikum3/Vladi/: Makefile  template.cu  timing.h
Praktikum3/Vladi/images/: out  test.c
(+30 files in other folders)
